Updated the master base template saas-bootcamp-baseline-master.template to invoke 2 new series of templates to accelerate Lab 1 by provisioning the pieces from Parts 2-6.
Updated most of the template descriptions so the CloudFormation console
UI is a little easier to follow. Still have more descriptions to update.

The tenant, auth and registration deployments now follow the pattern of
the user service - copying the Node application over to an S3 bucket
which is the source for a CodePipeline build that does the Docker build
and Docker push to our existing ECR. A CFN template is then lit off by
Lambda which creates the ECS Service. The ESC Task definitions already
exist from the baseline deployments.

--- a/Base/submodules/quickstart-aws-vpc/templates/aws-vpc.template
+++ b/Base/submodules/quickstart-aws-vpc/templates/aws-vpc.template
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "This template creates a Multi-AZ, multi-subnet VPC infrastructure with managed NAT gateways in the public subnet for each Availability Zone. You can also create additional private subnets with dedicated custom network access control lists (ACLs). If you deploy the Quick Start in a region that doesn't support NAT gateways, NAT instances are deployed instead. **WARNING** This template creates AWS resources. You will be billed for the AWS resources used if you create a stack from this template. QS(0027)",
+    "Description": "VPC multi-az, multi-subnet with NAT",
     "Metadata": {
         "AWS::CloudFormation::Interface": {
             "ParameterGroups": [
