--- a/Base/templates/product-manager/product-workload.template
+++ b/Base/templates/product-manager/product-workload.template
@@ -1,6 +1,6 @@
 ---
 AWSTemplateFormatVersion: 2010-09-09
-Description: Product Catalog Service
+Description: Product Catalog Service Setup
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
