--- a/Base/templates/saas-bootcamp-ecs-cluster.template
+++ b/Base/templates/saas-bootcamp-ecs-cluster.template
@@ -1,5 +1,5 @@
 ---
-Description: This template deploys an ECS cluster to the provided VPC and subnets  using
+Description: ECS cluster to the provided VPC and subnets using
   an Auto Scaling Group
 Parameters:
   EnvironmentName:
