--- a/Base/templates/saas-bootcamp-security-groups.template
+++ b/Base/templates/saas-bootcamp-security-groups.template
@@ -1,5 +1,5 @@
 ---
-Description: This template contains the security groups required by our ECS Cluster.
+Description: Security Groups for the ECS cluster
 Parameters:
   EnvironmentName:
     Description: An environment name that will be prefixed to resource names
