--- a/Base/templates/tenant-registration/registration-workload.template
+++ b/Base/templates/tenant-registration/registration-workload.template
@@ -1,6 +1,6 @@
 ---
 AWSTemplateFormatVersion: 2010-09-09
-Description: Tenant Registration Service
+Description: Tenant Registration Service Setup
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
