--- a/Lab1/Part6/templates/application-ui.template
+++ b/Lab1/Part6/templates/application-ui.template
@@ -22,6 +22,9 @@ Parameters:
     Type: String
     Description: BASELINE STACK NAME
     Default: module-saas-bootcamp-base
+  BaselineServicesStackName:
+    Type: String
+    Description: Baseline "services" stack name to get exports from
   QSS3BucketName:
     Default: 'aws-bootcamp-us-east-1'
     Description: S3 bucket name for the Bootcamp assets. Bootcamp bucket name
@@ -43,6 +46,7 @@ Resources:
       TemplateURL: !Sub https://s3.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}Lab1/Part6/templates/order/order-service.template
       Parameters:
         BaselineStackName: !Ref BaselineStackName
+        BaselineServicesStackName: !Ref BaselineServicesStackName
         QSS3BucketName: !Ref QSS3BucketName
         QSS3KeyPrefix: !Ref QSS3KeyPrefix
         ServiceUrl: !GetAtt API.Outputs.RootUrl
