--- a/Base/templates/admin-access-policy.template
+++ b/Base/templates/admin-access-policy.template
@@ -1,6 +1,6 @@
 ---
 AWSTemplateFormatVersion: 2010-09-09
-Description: This CloudFormation Template Invokes a Lambda Function to Create a Custom CloudFormation Resource
+Description: Invokes a Lambda function to attach an IAM policy to the Bootcamp user
 Parameters:
   S3Bucket:
     Description: The S3 Bucket Name of Zipped Lambda Code
