--- a/Base/templates/create-key-pair.template
+++ b/Base/templates/create-key-pair.template
@@ -1,6 +1,6 @@
 ---
 AWSTemplateFormatVersion: 2010-09-09
-Description: This CloudFormation Template Invokes a Lambda Function to Create a Custom CloudFormation Resource
+Description: Invoke Lambda function via a custom CloudFormation resource
 Parameters:
   S3Bucket:
     Description: The S3 Bucket Name of Zipped Lambda Code
