--- a/Lab1/Part6/templates/order/order-service.template
+++ b/Lab1/Part6/templates/order/order-service.template
@@ -22,6 +22,9 @@ Parameters:
     Type: String
     Description: BASELINE STACK NAME
     Default: module-saas-bootcamp-base
+  BaselineServicesStackName:
+    Type: String
+    Description: Baseline "services" stack name to get exports from
   QSS3BucketName:
     Default: aws-bootcamp-us-east-1
     Description: S3 bucket name for the Bootcamp assets. Bootcamp bucket name
@@ -101,6 +104,7 @@ Resources:
           Fn::ImportValue: !Sub "${BaselineStackName}-ECRREPOSITORY"
         OrderTable: 'OrderBootcamp'
         BaselineStackName: !Ref BaselineStackName
+        BaselineServicesStackName: !Ref BaselineServicesStackName
         QSS3BucketName: !Ref QSS3BucketName
         QSS3KeyPrefix: !Ref QSS3KeyPrefix
   WaitConditionService:
