In the accelerated version, the ApplicationUI stack doesn't have the PRODUCTTASKDEFINITION export, the baseline stack does.

--- a/Lab2/Part1/templates/product-manager-v1.template
+++ b/Lab2/Part1/templates/product-manager-v1.template
@@ -31,7 +31,7 @@ Resources:
       Role: !Ref ServiceRole
       DesiredCount: 1
       TaskDefinition:
-        Fn::ImportValue: !Sub "${ApplicationUIStackName}-PRODUCTTASKDEFINITION"
+        Fn::ImportValue: !Sub "${BaselineStackName}-PRODUCTTASKDEFINITION"
       LoadBalancers:
       - ContainerName: !Ref Tag
         ContainerPort: !Ref ContainerPort
