Looks like commit a708bd5 missed these CloudFormation templates and only got the PDFs.
Updating the Cloud9 environment to be owned by the assumed "player" role
for compatibility with the Event Engine. Note that this will break
deployment in a local account. We need to integrate some sort of
CloudFormation condition to alternate running in the EE or not.

--- a/Lab1/Part2/templates/saas-bootcamp-cloud9.template
+++ b/Lab1/Part2/templates/saas-bootcamp-cloud9.template
@@ -25,4 +25,5 @@ Resources:
       SubnetId: !Ref SubnetIdentifier
       InstanceType: !Ref EC2InstanceType
       Name: 'SAASBOOTCAMPIDE'
+      OwnerArn: !Sub "arn:aws:sts::${AWS::AccountId}:assumed-role/player-role/MasterKey"
 ...
