--- a/Lab1/Part6/templates/client/web-client-build.template
+++ b/Lab1/Part6/templates/client/web-client-build.template
@@ -17,6 +17,8 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       AccessControl: PublicRead
+      WebsiteConfiguration:
+        IndexDocument: index.html
   CloudFormationExecutionRole:
     Type: AWS::IAM::Role
     Properties:
