Removing the outdated Lab 0 guide as it confuses people. Updating the Event Engine player role to match the new system.

--- a/Lab1/Part2/templates/dev-environment.template
+++ b/Lab1/Part2/templates/dev-environment.template
@@ -62,7 +62,7 @@ Resources:
     DependsOn: CheckRoleFunction
     Properties:
       ServiceToken: !GetAtt CheckRoleFunction.Arn
-      RoleName: player-role
+      RoleName: TeamRole
   IDE:
     Type: AWS::CloudFormation::Stack
     DependsOn: CheckRole
