--- a/Base/functions/source/create-key-pair/package.json
+++ b/Base/functions/source/create-key-pair/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "okta-cfn",
+  "name": "keypair-cfn",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "judahb",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.111.0",
-    "cfn-response": "^1.0.1"
+    "aws-sdk": "^2.x",
+    "cfn-response": "^1.x"
   }
 }
