--- a/Lab1/Part6/functions/source/delete-api-gateways/package.json
+++ b/Lab1/Part6/functions/source/delete-api-gateways/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "judahb",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.111.0",
-    "cfn-response": "^1.0.1"
+    "aws-sdk": "^2.x",
+    "cfn-response": "^1.x"
   }
 }
